data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1244.wast
;; 5. **Test Description:**    - Define a module exporting a function that performs complex operand stack operations followed by a `br`.    - Import and execute this function, and confirm that the operand stack unwinding and restoration operate correctly.    - **Constraint:** Ensure that complex stack manipulations followed by branches maintain integrity across module transitions.

(assert_invalid
  (module
    (func $complex-stack-manipulation 
      (i32.const 1) (i32.const 2) (i32.const 3)
      (block (result i32)
        (drop) (drop) (br 0)
      )
    )
  )
  "type mismatch"
)